# Npc_interview_simulator

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  evaluation_models.py  interview.py  interview_models.py  report.py  user.py
backend/app/prompts/: __init__.py  evaluation_prompt.py  interview_prompt.py
backend/app/routes/: __init__.py  auth_routes.py  game_routes.py  interview_routes.py  report_routes.py
backend/app/schemas/: __init__.py  auth_schema.py  game_schema.py  interview_schema.py  report_schema.py
backend/app/security/: __init__.py  jwt.py  password.py
backend/app/services/: __init__.py  auth_service.py  elevenlabs_service.py  game_progress_service.py  interview_service.py  openai_evaluation_service.py  report_service.py
backend/app/static/: agent.html  agent.js  dashboard.html  dashboard.js  index.html  interview.css  landing.css  landing.js  mouse-trail.js  setup.html  setup.js
backend/app/utils/: logger.py
backend/scripts/: create_db.py  migrate_sqlite_to_database.py
backend/tests/: asgi_test_client.py  test_auth_interviews.py  test_health.py  test_prompts.py  test_ui.py
unity/Assets/Scripts/InterviewAudio/: AudioFrameProcessor.cs  ElevenLabsConversationClient.cs  InterviewAudioConfig.cs  Pcm16Utility.cs  PcmAudioOutput.cs  ProcessedMicrophoneCapture.cs  UnityAsyncOperationAwaiter.cs
unity/Assets/Scripts/InterviewAudio/Optional/: UnityWebRTCAudioTrackBridge.cs
unity/Docs/: InterviewAudioPipeline.md
