[project]
name = "npc-interview-simulator"
version = "1.0.0"
description = "TFG serious game for AI-powered NPC job interviews."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.116.1",
  "bcrypt==3.2.2",
  "httpx==0.28.1",
  "openai==1.99.9",
  "passlib[bcrypt]==1.7.4",
  "python-dotenv==1.1.1",
  "pydantic==2.11.7",
  "python-jose[cryptography]==3.5.0",
  "SQLAlchemy==2.0.45",
  "uvicorn==0.35.0",
]

[tool.vercel]
entrypoint = "api.index:app"
